--- a/src/styles/markdown.scss
+++ b/src/styles/markdown.scss
@@ -1,14 +1,16 @@
 .wmde-markdown {
   font-size: 16px;
   line-height: 1.5;
-  font-family: -apple-system,BlinkMacSystemFont,Segoe UI,Helvetica,Arial,sans-serif,Apple Color Emoji,Segoe UI Emoji;
+  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Helvetica, Arial,
+    sans-serif, Apple Color Emoji, Segoe UI Emoji;
   > :first-child {
     margin-top: 0 !important;
   }
   > :last-child {
     margin-bottom: 0 !important;
   }
-  code[class*="language-"], pre[class*="language-"] {
+  code[class*="language-"],
+  pre[class*="language-"] {
     color: black;
     text-align: left;
     white-space: pre;
@@ -39,28 +41,37 @@
     background-color: #f6f8fa;
     border-radius: 3px;
   }
-  code, tt {
-    background-color: rgba(27,31,35,.05);
+  code,
+  tt {
+    background-color: rgba(27, 31, 35, 0.05);
     border-radius: 3px;
     font-size: 85%;
     margin: 0;
-    padding: .2em .4em;
+    padding: 0.2em @include 4em;
   }
-  pre, code, tt {
-    font-family: SFMono-Regular,Consolas,Liberation Mono,Menlo,monospace;
+  pre,
+  code,
+  tt {
+    font-family: SFMono-Regular, Consolas, Liberation Mono, Menlo, monospace;
   }
   img {
     max-width: 100%;
   }
   input {
     vertical-align: middle;
-    margin: 0 .2em .25em -1.6em;
+    margin: 0 0.2em 0.25em -1.6em;
   }
-  h1, h2 {
+  h1,
+  h2 {
     border-bottom: 1px solid #eaecef;
-    padding-bottom: .3em;
+    padding-bottom: @include 3em;
   }
-  h1, h2, h3, h4, h5, h6 {
+  h1,
+  h2,
+  h3,
+  h4,
+  h5,
+  h6 {
     font-weight: 600;
     line-height: 1.25;
     margin-bottom: 16px;
@@ -79,12 +90,13 @@
     font-size: 1em;
   }
   h5 {
-    font-size: .875em;
+    font-size: @include 875em;
   }
   h6 {
-    font-size: .85em;
+    font-size: @include 85em;
   }
-  ol, ul {
+  ol,
+  ul {
     padding-left: 2em;
   }
   ul {
@@ -92,9 +104,10 @@
     margin-top: 0;
     list-style: initial;
   }
-  > blockquote, > blockquote blockquote {
+  > blockquote,
+  > blockquote blockquote {
     margin: 0;
-    border-left: .25em solid #dfe2e5;
+    border-left: 0.25em solid #dfe2e5;
     color: #6a737d;
     padding: 0 1em;
     > :last-child {
@@ -112,7 +125,8 @@
     height: 1px;
   }
 
-  > table, > blockquote table {
+  > table,
+  > blockquote table {
     display: block;
     overflow: auto;
     width: 100%;
@@ -123,12 +137,20 @@
       background-color: #fff;
       border-top: 1px solid #c6cbd1;
     }
-    td, th {
+    td,
+    th {
       border: 1px solid #dfe2e5;
       padding: 6px 13px;
     }
   }
-  blockquote, details, dl, ol, p, pre, table, ul {
+  blockquote,
+  details,
+  dl,
+  ol,
+  p,
+  pre,
+  table,
+  ul {
     margin-bottom: 16px;
     margin-top: 0;
   }
@@ -142,7 +164,7 @@
   }
 
   .namespace {
-    opacity: .7;
+    opacity: @include 7;
   }
   .token.important {
     font-weight: normal;
